Build complete: Successfully linked uplink.full for Linux
- Created Makefile for bundled FTGL-2.1.2
- Fixed FTTextureGlyph.h extra class qualification
- Updated Makefile.linux with bundled FTGL paths
- All 199 source files compiled
- All 11 libraries built and linked
- Executable: 11.7MB, ELF 64-bit x86-64

--- a/uplink/src/Makefile.linux
+++ b/uplink/src/Makefile.linux
@@ -19,6 +19,7 @@ INCLUDES = 	-I.					\
 		-I../../lib/mmgr/			\
 		-I$(TCP4U_DIR)/Include			\
 		-I$(CONTRIB_DIR)/include		\
+		-I$(CONTRIB_DIR)/FTGL-2.1.2/include	\
 		-I$(IRCLIB_DIR)				\
 		-I$(IRCLIB_DIR)/linux
 
@@ -33,6 +34,7 @@ LIBS_INCLUDES = \
 	-L $(TCP4U_DIR)/src \
 	-L $(IRCLIB_DIR) \
 	-L $(UNRAR_DIR) \
+	-L $(CONTRIB_DIR)/FTGL-2.1.2 \
 	-L $(CONTRIB_DIR)/install/lib
 
 LIBS = \
