Add texture atlas loader for HD UI sprite sheets
- Add hd_atlas.h/cpp for loading mod's texture atlas
- Parses XML atlas definitions (uplinkHD_atlas_00.xml)
- Creates sub-bitmaps for each sprite region
- AtlasManager singleton for global texture access
- Build verified successful

--- a/uplink/src/Makefile.linux
+++ b/uplink/src/Makefile.linux
@@ -91,6 +91,7 @@ hd_ui/hd_allegro5.cpp \
 hd_ui/hd_ui_object.cpp \
 hd_ui/hd_layout_parser.cpp \
 hd_ui/hd_screens.cpp \
+hd_ui/hd_atlas.cpp \
 game/data/data.cpp \
 game/game.cpp \
 game/gameobituary.cpp \
